SENTRY-1116: Fix PMD violation for Sentry tests after missing commits
Change-Id: I8c303dca3e9358ae1cba07040a41867eefff67ed